# atelier1g2

./: main.c  main2.c
smart esprit/: Makefile  config.status  smartesprit.glade.bak
smart esprit/autom4te.cache/: requests
smart esprit/src/: Fumee.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  capteur.c  capteur.h  capteurs.txt  chambre.txt  dej.c  dej.h  dej.txt  din.c  din.h  din.txt  f.c  f.h  fichier.txt  finalpojectcapt  fonction.c  fonction.h  interface.c  interface.c.bak  interface.h  main.c  mouvement.txt  niveaux.txt  nutr.c  nutr.h  old.txt  pdej.c  pdej.h  petit_dej.txt  produit.txt  reclamation.c  reclamation.h  reclamationH.txt  reclamationR.txt  smartesprit  (+3 more)
smart esprit/src/.deps/: callbacks.Po  capteur.Po  dej.Po  din.Po  f.Po  nutr.Po  pdej.Po  reclamation.Po
